# log

./: CMakeLists.txt  README.md  vix.json
.github/workflows/: log-cross-platform-ci.yml  log-strict-ci.yml
cmake/: vix_logConfig.cmake.in
include/vix/log/: GlobalLog.hpp  Log.hpp  LogAdapter.hpp  LogConfig.hpp  LogContext.hpp  LogFormat.hpp  LogLevel.hpp
src/: GlobalLog.cpp  LogAdapter.cpp
test/: CMakeLists.txt  log_test.cpp
